--- a/.github/workflows/3jobs.yml
+++ b/.github/workflows/3jobs.yml
@@ -16,7 +16,7 @@ jobs:
           $commitParts = $commit -split '\s+'
           $commitsha = $commitParts[0]
           echo "librime commit SHA: $commitsha"
-          echo "::set-output name=commitsha::$commitsha"
+          #echo "::set-output name=commitsha::$commitsha"
 
   job2:
     runs-on: windows-2022
@@ -24,12 +24,13 @@ jobs:
     steps:
       - name: Use commit SHA in job2
         run: |
-          commitsha_from_job1="${{ needs.Get_Commit_SHA.outputs.commit_sha }}"
+          $commitsha_from_job1="${{ needs.Get_Commit_SHA.outputs.commit_sha }}"
           echo "Using commit SHA from job1: $commitsha_from_job1"
           
   job3:
     runs-on: windows-2022
-    needs: Get_Commit_SHA
+    if: ${{ always() }}
+    needs: [Get_Commit_SHA, job2]
     steps:
 
       - name: Cache commit SHA
@@ -42,7 +43,7 @@ jobs:
       - name: Create out.txt with commit SHA
         if: steps.cache-commit-sha.outputs.cache-hit != 'true' 
         run: |
-          commit_sha_from_job1="${{ needs.Get_Commit_SHA.outputs.commit_sha }}"
+          $commit_sha_from_job1="${{ needs.Get_Commit_SHA.outputs.commit_sha }}"
           echo "Commit SHA from job1: $commit_sha_from_job1" > out.txt
       - name: OutPut commit SHA
         run: |
