--- a/.github/workflows/3jobs.yml
+++ b/.github/workflows/3jobs.yml
@@ -25,7 +25,7 @@ jobs:
     steps:
       - name: Use commit SHA in job2
         run: |
-          $commitsha_from_job1="${{ needs.Get_Commit_SHA.outputs.commit_sha }}"
+          $commitsha_from_job1="${{ needs.get-commit-sha.outputs.commitsha }}"
           echo "Using commit SHA from job1: $commitsha_from_job1"
           
   job3:
@@ -39,12 +39,12 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ${{ runner.workspace }}  # 缓存整个工作目录
-          key: cache-${{ needs.Get_Commit_SHA.outputs.commit_sha }}  # 使用 commit SHA 作为缓存的 key
+          key: cache-${{ needs.get-commit-sha.outputs.commitsha }}  # 使用 commit SHA 作为缓存的 key
           
       - name: Create out.txt with commit SHA
         if: steps.cache-commit-sha.outputs.cache-hit != 'true' 
         run: |
-          $commit_sha_from_job1="${{ needs.Get_Commit_SHA.outputs.commit_sha }}"
+          $commit_sha_from_job1="${{ needs.get-commit-sha.outputs.commitsha }}"
           echo "Commit SHA from job1: $commit_sha_from_job1" > out.txt
       - name: OutPut commit SHA
         run: |
