--- a/.github/workflows/3jobs.yml
+++ b/.github/workflows/3jobs.yml
@@ -17,7 +17,8 @@ jobs:
           $commitsha = $commitParts[0]
           echo "librime commit SHA: $commitsha"
           #$GITHUB_OUTPUT = "commitsha = $commitsha"
-          echo "commitsha = $commitsha" >> $env:GITHUB_OUTPUT
+          echo "commitsha = $commitsha" | Out-File -FilePath $env:GITHUB_OUTPUT -Encoding utf8 -Append
+          cat $env:GITHUB_OUTPUT
           #echo "::set-output name=commitsha::$commitsha"
 
   job2:
