--- a/.github/workflows/3jobs.yml
+++ b/.github/workflows/3jobs.yml
@@ -25,9 +25,13 @@ jobs:
     runs-on: windows-2022
     needs: Get_Commit_SHA
     steps:
+    env:
+      commitsha_from_job1: ${{ needs.get-commit-sha.outputs.commitsha }}
       - name: Use commit SHA in job2
         run: |
-          $commitsha_from_job1="${{ needs.get-commit-sha.outputs.commitsha }}"
+          #$commitsha_from_job1="${{ needs.get-commit-sha.outputs.commitsha }}"
+          cat $env:GITHUB_OUTPUT
+          echo $env:commitsha_from_job1
           echo "Using commit SHA from job1: $commitsha_from_job1"
           
   job3:
