--- a/.github/workflows/3jobs.yml
+++ b/.github/workflows/3jobs.yml
@@ -24,9 +24,9 @@ jobs:
   job2:
     runs-on: windows-2022
     needs: Get_Commit_SHA
+    env:
+      commitsha_from_job1: ${{ needs.get-commit-sha.outputs.commitsha }}
     steps:
-      - env:
-        commitsha_from_job1: ${{ needs.get-commit-sha.outputs.commitsha }}
       - name: Use commit SHA in job2
         run: |
           #$commitsha_from_job1="${{ needs.get-commit-sha.outputs.commitsha }}"
