--- a/.github/workflows/exit-test.yml
+++ b/.github/workflows/exit-test.yml
@@ -8,15 +8,17 @@ jobs:
     runs-on: windows-2022
     steps:
       - name: Get Last commit sha
+        id: lastsha
         run: |
           $commit = git ls-remote https://github.com/rime/librime/ master
           $commitParts = $commit -split '\s+'
           $commitsha = $commitParts[0]
           $env:commitsha = $commitsha
           echo "librime commit SHA: $commitsha"
+          echo "sha=$commitsha" | Out-File -FilePath $env:GITHUB_OUTPUT -Encoding utf8 -Append
       - name: Test env
         run: |
-          echo $env:commitsha
+          echo $env:sha
 
       - name: Cache commit SHA
         id: cache-commit-sha
