--- a/.github/workflows/exit-test.yml
+++ b/.github/workflows/exit-test.yml
@@ -4,8 +4,35 @@ on:
   workflow_dispatch:
 
 jobs:
-  job3:
+  job1:
     runs-on: windows-2022
+    steps:
+      - name: Get Last commit sha
+        id: lastsha
+        run: |
+          $commit = git ls-remote https://github.com/rime/librime/ master
+          $commitParts = $commit -split '\s+'
+          $commitsha = $commitParts[0]
+          "commitsha=$commitsha" |  Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+          "needupdate=$false" |  Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+          echo "librime commit SHA: $commitsha"
+          echo "sha=$commitsha" | Out-File -FilePath $env:GITHUB_OUTPUT -Encoding utf8 -Append
+          
+      - name: Create cache
+        id: cache-commit-sha
+        uses: actions/cache@v3
+        with:
+          path: ${{ runner.workspace }}  # 缓存整个工作目录
+          key: $commitsha  # 使用 commit SHA 作为缓存的 key
+          
+      - name: Create out.txt with commit SHA
+        if: steps.cache-commit-sha.outputs.cache-hit != 'true' 
+        run: |
+          "needupdate=$true" |  Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+  
+  job2:
+    runs-on: windows-2022
+    if: ${{ github.env.needupdate }} != true
     steps:
       - name: Get Last commit sha
         id: lastsha
