--- a/.github/workflows/exit-test.yml
+++ b/.github/workflows/exit-test.yml
@@ -34,6 +34,7 @@ jobs:
   job2:
     runs-on: windows-2022
     needs: job1
+    steps:
       - name: Get Last commit sha
         id: lastsha
         run: |
