--- a/.github/workflows/exit-test.yml
+++ b/.github/workflows/exit-test.yml
@@ -26,7 +26,7 @@ jobs:
           key: ${{env.commitsha}}  # 使用 commit SHA 作为缓存的 key
           
       - name: Create out.txt with commit SHA
-        if: steps.cache-commit-sha1.outputs.cache-hit = 'true' 
+        if: steps.cache-commit-sha1.outputs.cache-hit == 'true' 
         continue-on-error: true
         run: |
           #"needupdate=$true" |  Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
