--- a/.github/workflows/exit-test.yml
+++ b/.github/workflows/exit-test.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: windows-2022
     steps:
       - name: Get Last commit sha
-        id: lastsha
+        id: lastsha1
         run: |
           $commit = git ls-remote https://github.com/rime/librime/ master
           $commitParts = $commit -split '\s+'
@@ -46,6 +46,7 @@ jobs:
           "commitsha=$commitsha" |  Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
           echo "librime commit SHA: $commitsha"
           echo "sha=$commitsha" | Out-File -FilePath $env:GITHUB_OUTPUT -Encoding utf8 -Append
+          echo ${{needs.needs.completed-successfully.result}}
       - name: Test env
         run: |
           echo "From outputs"
