--- a/.github/workflows/exit-test.yml
+++ b/.github/workflows/exit-test.yml
@@ -46,7 +46,7 @@ jobs:
           "commitsha=$commitsha" |  Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
           echo "librime commit SHA: $commitsha"
           echo "sha=$commitsha" | Out-File -FilePath $env:GITHUB_OUTPUT -Encoding utf8 -Append
-          echo ${{needs.lastsha1.result}}
+          echo ${{jobs.lastsha1.result}}
       - name: Test env
         run: |
           echo "From outputs"
