--- a/.github/workflows/exit-test.yml
+++ b/.github/workflows/exit-test.yml
@@ -6,6 +6,8 @@ on:
 jobs:
   job1:
     runs-on: windows-2022
+    outputs: 
+      buildlibrime ${{steps.checklibrime.outputs.bulidrime}}
     steps:
       - name: Get Last commit sha
         id: lastsha1
@@ -26,15 +28,16 @@ jobs:
           key: ${{env.commitsha}}  # 使用 commit SHA 作为缓存的 key
           
       - name: Create out.txt with commit SHA
+        id: checklibrime
         if: steps.cache-commit-sha1.outputs.cache-hit == 'true' 
-        continue-on-error: true
+        #continue-on-error: true
         run: |
-          #"needupdate=$true" |  Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+          "bulidrime=1" |  Out-File -FilePath $env:GITHUB_OUTPUT -Encoding utf8 -Append
           exit 1
   
   job2:
     runs-on: windows-2022
-    if: always() && (needs.job1.result == 'success')
+    if: always() && (needs.job1.outputs.buildlibrime == '1')
     needs: job1
     steps:
       - name: Get Last commit sha
@@ -46,7 +49,7 @@ jobs:
           "commitsha=$commitsha" |  Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
           echo "librime commit SHA: $commitsha"
           echo "sha=$commitsha" | Out-File -FilePath $env:GITHUB_OUTPUT -Encoding utf8 -Append
-          #echo ${{needs.job1.result}}
+          echo ${{needs.job1.outputs.buildlibrime}}
       - name: Test env
         run: |
           echo "From outputs"
